lustration client implemented

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
       "codesniffer src tests"
     ],
     "tests": [
-      "tester -s -p php --colors 1 -C tests/cases"
+      "tester -s -p php --colors 1 -C tests/Cases"
     ],
     "coverage": [
       "tester -s -p phpdbg --colors 1 -C --coverage ./coverage.xml --coverage-src ./src tests/cases"
