--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
       "tester -s -p php --colors 1 -C tests/Cases"
     ],
     "coverage": [
-      "tester -s -p phpdbg --colors 1 -C --coverage ./coverage.xml --coverage-src ./src tests/cases"
+      "tester -s -p phpdbg --colors 1 -C --coverage ./coverage.xml --coverage-src ./src tests/Cases"
     ],
     "phpstan-install": [
       "mkdir -p temp/phpstan",
