--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "require-dev": {
     "ninjify/qa": "^0.8.0",
-    "ninjify/nunjuck": "^0.2.0"
+    "ninjify/nunjuck": "^0.2.0",
+    "mockery/mockery": "^1.2"
   },
   "autoload": {
     "psr-4": {
