added composer ci command as a shortcut for code analysis and tests

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,11 @@
     ],
     "phpstan": [
       "temp/phpstan/vendor/bin/phpstan analyse -l max -c phpstan.neon src"
+    ],
+    "ci": [
+      "composer qa",
+      "composer phpstan",
+      "composer tests"
     ]
   },
   "extra": {
