--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "require": {
     "ext-json": "*",
     "ext-soap": "*",
-    "php": ">= 7.1"
+    "php": ">= 7.1",
+    "nette/di": "^2.4"
   },
   "require-dev": {
     "ninjify/qa": "^0.8.0",
