--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "ext-json": "*",
     "ext-soap": "*",
     "php": ">= 7.1",
-    "nette/di": "^2.4"
+    "nette/di": "^2.4 || ~3.0.0"
   },
   "require-dev": {
     "ninjify/qa": "^0.8.0",
